# CDFD

./: .gitignore  README.md  pyproject.toml  requirements.txt  tmp_trace_cp.py
docs/: cdfd-json-format.md  cdfd-json-schema.json  cdfd-research-notes.md  concurrent-paths-enhancement.md  multi-output-enhancement.md
examples/: 11_multi_output.json  branch.yaml  cdfd_v1.json  choice.json  data_store.json  duoshuru.cdfd  join.json  linear.csv  loop.csv  loop.json  multilevel.json  port_alternatives.json  simple.json  xuexitong.cdfd
paper/: README.md  main.fdb_latexmk  main.fls  main.tex  main_zh.md  references.bib  requirements-summary.md  review_zh.md
src/cdfd/: __init__.py  cli.py  concurrent_paths.py  consistency.py  exporters.py  flow_decomposition.py  models.py  multilevel.py  path_finder.py  path_groups.py  scenarios.py  web.py
src/cdfd/parsers/: __init__.py  errors.py  sofl_xml.py
src/cdfd/schemas/: cdfd-json-schema.json
src/cdfd/templates/: index.html
tests/: test_cli.py  test_concurrent_paths.py  test_consistency.py  test_examples.py  test_exporters.py  test_multi_output.py  test_multilevel.py  test_parsers.py  test_path_finder.py  test_path_groups.py  test_scenarios.py  test_web.py
tmpCode/: application_case.cdfd  concurrent.cdfd  condition.cdfd  liner.cdfd  multi-input.cdfd  multi-output.cdfd
